Avoiding horizontal overflow

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ header nav a {
     perspective: 1px;
     height: 100vh;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .parallax__layer {
